--- a/index.html
+++ b/index.html
@@ -221,6 +221,32 @@
         </div>
       </div>
 
+      
+      <!-- YouTube Video Grid -->
+      <div class="mt-24 border-t border-slate-200 dark:border-slate-800 pt-12">
+        <div class="max-w-6xl mx-auto">
+          <div class="text-center mb-10">
+            <span class="inline-flex items-center px-3 py-1 rounded-full bg-primary/10 text-primary text-xs font-bold tracking-widest uppercase mb-4 border border-primary/20">
+              Watch
+            </span>
+            <h2 class="text-2xl md:text-3xl font-extrabold text-slate-900 dark:text-white tracking-tight">
+              See The Six in Action
+            </h2>
+          </div>
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="videoGrid">
+            <div class="rounded-xl overflow-hidden shadow-sm border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-900 aspect-video">
+              <iframe class="w-full h-full" src="https://www.youtube.com/embed/8dVa9vH4BbM?si=O6qcO2nZ-0EyI2Sb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="rounded-xl overflow-hidden shadow-sm border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-900 aspect-video">
+              <iframe class="w-full h-full" src="https://www.youtube.com/embed/8adviQrRa1w?si=8ndzwDKaKjEpXoCS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="rounded-xl overflow-hidden shadow-sm border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-900 aspect-video">
+              <iframe class="w-full h-full" src="https://www.youtube.com/embed/qWO7eXUQ4Rc?si=qihJ_m-k60cYCMRS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="mt-24 border-t border-slate-200 dark:border-slate-800 pt-12">
         <div class="max-w-6xl mx-auto flex flex-col md:flex-row items-center justify-between gap-8">
           <p class="text-sm font-semibold text-slate-400 uppercase tracking-widest">Built for day-one founders</p>
