Add new YouTube live video iframe to index.html

--- a/index.html
+++ b/index.html
@@ -411,6 +411,9 @@
             <div class="rounded-xl overflow-hidden shadow-sm border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-900 aspect-video">
               <iframe class="w-full h-full" src="https://www.youtube.com/embed/qWO7eXUQ4Rc?si=qihJ_m-k60cYCMRS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
+            <div class="rounded-xl overflow-hidden shadow-sm border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-900 aspect-video">
+              <iframe class="w-full h-full" src="https://www.youtube.com/live/gDKpcsCIR14?si=mP8j3mE43YOIqgtV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
           </div>
         </div>
       </div>
