--- a/index.html
+++ b/index.html
@@ -412,6 +412,9 @@
               <iframe class="w-full h-full" src="https://www.youtube.com/embed/qWO7eXUQ4Rc?si=qihJ_m-k60cYCMRS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="rounded-xl overflow-hidden shadow-sm border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-900 aspect-video">
+              <iframe class="w-full h-full" src="https://www.youtube.com/embed/Tq9a-QHDrM0?si=JQHsX9AwiZKP2SM2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="rounded-xl overflow-hidden shadow-sm border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-900 aspect-video">
               <iframe class="w-full h-full" src="https://www.youtube.com/embed/gDKpcsCIR14?si=PCJ7CWfKAZbvoXGA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
           </div>
